# suubd

./: README.md
homework_1/: CMakeLists.txt  Makefile
homework_1/data/basic/: demo-rename.txt
homework_1/data/individual/: demo-rename.txt
homework_1/demo/: main.cpp
homework_1/include/: cli.hpp  csv.hpp  extra.hpp
homework_1/include/common/: base.hpp  basic.hpp  db.hpp  individual.hpp  prompts.hpp  student.hpp
homework_1/scripts/: tests.sh
homework_1/sources/: csv.cpp
homework_1/sources/common/: base.cpp  basic.cpp  db.cpp  individual.cpp
homework_1/tests/: run.cpp  tests.cpp
